--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="row">
           <a href="/blog">BLOG</a>
           <a href="/about">ABOUT</a>
+		  <a href="/academic">ACADEMIC</a>
           <a href="/projects">PROJECTS</a>
       </div>
       <div class="row">
