--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         {{ site.name }}
       </h1>
       <h3>
-        Aston University graduate
+        Electronic engineer. Blogger. Tweeter. Footballer.
       </h3>
     </section>
 
@@ -45,7 +45,7 @@
           <a href="/projects">PROJECTS</a>
       </div>
       <div class="row">
-          <a href="">TUMBLR</a>
+          <a href="in.linkedin.com/in/tushantsharma/">LINKEDIN</a>
           <a href="https://twitter.com/SharmaTushant">TWITTER</a>
       </div>
     </section>
