--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="/projects">PROJECTS</a>
       </div>
       <div class="row">
-          <a href="in.linkedin.com/in/tushantsharma/">LINKEDIN</a>
+          <a href="https://in.linkedin.com/in/tushantsharma/">LINKEDIN</a>
           <a href="https://twitter.com/SharmaTushant">TWITTER</a>
       </div>
     </section>
