--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         {{ site.name }}
       </h1>
       <h3>
-        Electronic engineer. Blogger. Tweeter. Footballer.
+        Electrical engineer. Electronics enthusiast. Blogger. Tweeter. Footballer.
       </h3>
     </section>
 
