--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="meta">
       <div class="row">
-          <a href="/archive">BLOG</a>
+          <a href="/blog">BLOG</a>
           <a href="/about">ABOUT</a>
 		  <a href="/academic">ACADEMIC</a>
           <a href="/projects">PROJECTS</a>
