--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ title: "Not Found"
 <section class="content">
   <h1>Not Found</h1>
 
-  <p>Sorry! Couldn't find that page. Bummer.</p>
+  <p>Sorry! There seems to be a problem with this page. Bummer.</p>
 </section>
