--- a/about/index.html
+++ b/about/index.html
@@ -11,9 +11,9 @@ title: "About Me"
 
 		<section class="pure-u-2-3 container">
 			{% include nav.html %}
-			Work in progress.
-			</section>
-		
+
+		</section>
+		{{ site.about.md }}
 	</div>
 	{% include footer.html %}
 </body>
