Revert "update index"
This reverts commit 6ed735c5ba67e7698cfd482f7fa70453cb0a1009.

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "About Me"
 ---
 
@@ -13,9 +13,9 @@ title: "About Me"
 			{% include nav.html %}
 
 		</section>
+		
+			{% include about.md %}
 			
 	</div>
-	{% include about.md %}
-	
 	{% include footer.html %}
 </body>
